--- a/instances/ibm-sfg-b2bi-prod/values.yaml
+++ b/instances/ibm-sfg-b2bi-prod/values.yaml
@@ -64,7 +64,7 @@ ibm-sfg-prod:
     dbPort: 50000
     dbData: B2BIDB
     dbDrivers: db2jcc4.jar
-    dbCreateSchema: true
+    dbCreateSchema: false
     # Name of DB secret
     dbSecret: b2b-db-secret
     #Provide the admin email address
